--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>ShoppingList</h2>
+	<ol>
+		<li>Watch</li>
+		<li>Cloths</li>
+		<li>Books</li>
+	</ol>
+	<h2>holidayList</h2>
+	<ul>
+		<li>Japan</li>
+		<li>Singapur</li>
+		<li>USA</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
